<resources>
    <string name="app_name">GoogleArchitecture</string>
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">输入关键字搜索</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_project">项目</string>
    <string name="title_square">广场</string>
    <string name="title_mine">我的</string>
    <string name="null_tag">null</string>
    <string name="fab_scrolling_view_behavior">com.lbz.googlearchitecture.widget.FastBackTopFabBehaviorJava</string>
    <string name="article_tag_top">置顶</string>
    <string name="article_tag_new">新</string>
    <string name="mine">我的</string>
    <string name="menu_search_title">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="history_clear_btn_label">清空</string>
    <string name="search_menu_title">搜索</string>
    <string name="delete_search_history_dialog_title">温馨提示</string>
    <string name="delete_search_history_dialog_message">确定清空吗?</string>
    <string name="delete_search_history_dialog_negative_btn_text">取消</string>
    <string name="delete_search_history_dialog_positive_btn_text">清空</string>
    <string name="my_integral">我的积分</string>
    <string name="current_integral">当前积分:</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_article">我的文章</string>
    <string name="open_source_web">开源网站</string>
    <string name="system_setting">系统设置</string>
    <string name="not_login_display_name">请先登录~</string>
    <string name="login">登录</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_page_register_tips">没有账号？点击注册</string>
</resources>