<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>



    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/me_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/me_linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:paddingTop="?attr/actionBarSize"
                        android:paddingBottom="?attr/actionBarSize">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:layout_marginStart="16dp"
                            android:src="@mipmap/ic_account"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/me_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:textColor="@android:color/white"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/me_info"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toTopOf="@+id/imageView"
                            app:layout_constraintVertical_chainStyle="packed"
                            tools:text="我是最帅" />

                        <TextView
                            android:id="@+id/me_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="12dp"
                            android:textColor="@android:color/white"
                            android:textSize="12dp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            app:layout_constraintTop_toBottomOf="@+id/me_name"
                            tools:text="id：--　排名：--" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="-16dp"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="16dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_integral" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/my_integral"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="@dimen/dp_14"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="6dp"
                                    android:text="@string/current_integral"
                                    android:textColor="@color/textHint"
                                    android:textSize="@dimen/dp_13" />

                                <TextView
                                    android:id="@+id/me_integral"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="8dp"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="15dp"
                                    android:textStyle="bold"
                                    tools:text="10000000" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginEnd="16dp"
                                    android:src="@mipmap/ic_collect" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/my_collect"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="@dimen/dp_14"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_article" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/my_article"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="@dimen/dp_14"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_todo" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="TODO"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="@dimen/dp_14"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="8dp"
                                android:background="@color/windowBackground" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_open_source_web" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/open_source_web"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="14dp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_setting" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/system_setting"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="14dp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/logout"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="?attr/selectableItemBackground"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp">

                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_marginRight="16dp"
                                    android:src="@mipmap/ic_setting" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="退出"
                                    android:textColor="@color/colorBlack333"
                                    android:textSize="14dp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:src="@mipmap/ic_right" />
                            </LinearLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>